--- a/q2Books/books.html
+++ b/q2Books/books.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="../public/stylesheets/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    
+    <header>
+      <h1>Galvanize-reads</h1>
+    </header>
   </body>
 </html>
