fixed a couple bugs

--- a/q2Books/books.html
+++ b/q2Books/books.html
@@ -16,8 +16,8 @@
     <h1>Galvanize-Reads</h1>
 
     <section>
-      <form class="addBook" action="addBook.html" method="post">
-        <button class="addBookButton" type="submit" name="button">ADD A BOOK</button>
+      <form class="addBook" action="booksOverview">
+        <input class="addBookButton" type="submit">ADD A BOOK</input>
       </form>
     </section>
   </header>
