--- a/q2Books/newBook.html
+++ b/q2Books/newBook.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
-</html>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="./stylesheets/normalize.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="./addBook.css" media="screen" title="no title" charset="utf-8">
+</head>
+
+<body>
+
+<!-- ######## Header #########  -->
+  <header>
+    <img src="" alt="" />
+    <h1>Galvanize-Reads</h1>
+
+    <section>
+      <form class="addBook" action="addBook.html" method="post">
+        <button class="addBookButton" type="submit" name="button">ADD A BOOK</button>
+      </form>
+    </section>
+  </header>
+
+<!-- ######## Side Bar #########  -->
+  <aside class="sideBar">
+
+      <a href="books.html">
+        <article class="booksLink">
+          <h3>Books</h3>
+        </article>
+      </a>
+
+      <a href="authors.html">
+        <article class="authorsLink">
+          <h3>Authors</h3>
+        </article>
+      </a>
+
+  </aside>
+
+  <main>
+    <form class="addBookForm" action="books.jade" method="post">
+
+        <label for="book_title">Title: </label>
+      <input type="text" name="book_title" value="">
+
+        <label for="book_genre">Genre: </label>
+      <input type="text" name="book_genre" value="">
+
+        <label for="bookDescription">Book Description: </label>
+      <textarea name="book_descrition" rows="8" cols="40"></textarea>
+
+      <label for="book_cover_url">Book Cover Image URL: </label>
+      <input type="text" name="book_cover_url" value="">
+
+      <label for="author1_firstname">Author 1 First Name: </label>
+      <input type="text" name="author1_firstname" value="">
+
+      <label for="author1_lastname">Author 1 Last Name</label>
+      <input type="text" name="author1_lastname" value="">
+
+      <label for="author1_portrait">Author 1 Portrait URL</label>
+      <input type="text" name="author1_portrait" value="">
+
+      <label for="author1_biography">Author 1 Biography</label>
+      <input type="text" name="author1_biography" value="">
+
+      <input class="btn" type="submit" value="Submit Book To Database">
+    </form>
+  </main>
